# MSC-Project

./: CMakeLists.txt  README.MD  config.h.in
assets/shaders/: blinnphong.frag  common.vert  environment.frag  grid.frag  grid.vert  postprocessrender.frag  renderintriangle.vert  ssao.comp  unlitColor.frag  unlitColor.vert
common/: appbase.cpp  appbase.h  camera.cpp  camera.h  common.cpp  common.h  component.h  device.cpp  device.h  environment.cpp  environment.h  errorlist.h  game.h  grid.cpp  grid.h  gui.cpp  gui.h  idObject.h  image.cpp  image.h  input.cpp  input.h  light.cpp  light.h  material.cpp  material.h  model.cpp  model.h  node.cpp  node.h  noncopyable.h  prerequisites.h  renderer.h  renderserver.cpp  renderserver.h  rigidbody.h  scene.cpp  scene.h  signal.h  singleton.h  (+9 more)
examples/: test.cpp
